feat: improve screen reader / textmode usability

--- a/src/components/DesktopNavbarLink/DesktopNavbarLink.module.css
+++ b/src/components/DesktopNavbarLink/DesktopNavbarLink.module.css
@@ -1,74 +1,69 @@
 .navbarLink {
-    position: relative;
+  position: relative;
 }
 
 .label {
-    padding: var(--size-lg) var(--size-sm);
-    width: 100%;
-    min-width: max-content;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    user-select: none;
-    gap: var(--size-xs);
-    font: var(--font-button);
+  padding: var(--size-lg) var(--size-sm);
+  width: 100%;
+  min-width: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  user-select: none;
+  gap: var(--size-xs);
+  font: var(--font-button);
 }
 
-.navbarLink > nav {
-    color: initial;
-    visibility: hidden;
-    background-color: var(--color-background);
-    box-shadow: var(--shadow);
-    position: absolute;
-    bottom: calc(-1 * var(--size-sm));
-    height: max-content;
-    left: 0;
-    opacity: 0;
-    transform: translateY(100%);
+.navbarLink > ol {
+  list-style: none;
+  color: initial;
+  visibility: hidden;
+  background-color: var(--color-background);
+  box-shadow: var(--shadow);
+  position: absolute;
+  bottom: calc(-1 * var(--size-sm));
+  height: max-content;
+  left: 0;
+  opacity: 0;
+  transform: translateY(100%);
 
-    --ease-speed: 0.25s;
-    transition:
-        opacity var(--ease-out),
-        bottom var(--ease-out);
+  --ease-speed: 0.25s;
+  transition: opacity var(--ease-out), bottom var(--ease-out);
 }
 
 .navbarLink:hover,
 .navbarLink:focus,
 .navbarLink:focus-within {
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
-    transition:
-        background-color var(--ease-out),
-        color var(--ease-out);
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+  transition: background-color var(--ease-out), color var(--ease-out);
 }
-.navbarLink:hover > nav,
-.navbarLink:focus > nav,
-.navbarLink:focus-within > nav {
-    visibility: visible;
-    bottom: 0;
-    opacity: 1;
+.navbarLink:hover > ol,
+.navbarLink:focus > ol,
+.navbarLink:focus-within > ol {
+  visibility: visible;
+  bottom: 0;
+  opacity: 1;
 }
 
-.navbarLink > nav .label {
-    padding: var(--size-sm);
+.navbarLink > ol .label {
+  padding: var(--size-sm);
 }
 
-.navbarLink.nested > nav {
-    top: var(--size-xs);
-    right: 0;
-    transform: translateX(100%);
-    transition:
-        opacity var(--ease-out),
-        top var(--ease-out);
+.navbarLink.nested > ol {
+  top: var(--size-xs);
+  right: 0;
+  transform: translateX(100%);
+  transition: opacity var(--ease-out), top var(--ease-out);
 }
 
 .navbarLink.nested {
-    user-select: none;
+  user-select: none;
 }
 
-.navbarLink.nested:hover > nav,
-.navbarLink.nested:focus > nav,
-.navbarLink.nested:focus-within > nav {
-    bottom: 0;
-    top: 0;
+.navbarLink.nested:hover > ol,
+.navbarLink.nested:focus > ol,
+.navbarLink.nested:focus-within > ol {
+  bottom: 0;
+  top: 0;
 }
