--- a/src/components/MobileNavbarLink/MobileNavbarLink.module.css
+++ b/src/components/MobileNavbarLink/MobileNavbarLink.module.css
@@ -1,35 +1,36 @@
 .navbarLink {
-    background: var(--color-base-3);
-    padding-left: var(--size-md);
+  background: var(--color-base-3);
+  padding-left: var(--size-md);
 }
 
-.navbarLink > nav {
-    border-left: 2px solid var(--color-base-4);
+.navbarLink > ol {
+  border-left: 2px solid var(--color-base-4);
+  list-style: none;
 }
 
 .navbarLink > summary {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .icon {
-    display: flex;
-    padding: 0 var(--size-md);
+  display: flex;
+  padding: 0 var(--size-md);
 }
 
 .label {
-    display: block;
-    flex: 1;
-    padding-top: var(--size-md);
-    padding-bottom: var(--size-md);
-    font: var(--font-button);
+  display: block;
+  flex: 1;
+  padding-top: var(--size-md);
+  padding-bottom: var(--size-md);
+  font: var(--font-button);
 }
 
 .navbarLink[open] > summary > .icon > .iconClosed {
-    display: none;
+  display: none;
 }
 
 .navbarLink:not([open]) > summary > .icon > .iconOpen {
-    display: none;
+  display: none;
 }
